# rbc

./: .gitignore  Cargo.toml  bookmarklet.js  game_52825.html
examples/: render.rs  thread_local_log.rs
src/: ai_interface.rs  api.rs  bitboard.rs  cfr.rs  derive_wrapper.rs  distr.rs  eval.rs  fast.rs  game.rs  greedy.rs  history.rs  history_db.rs  html.rs  infoset.rs  interact.rs  lib.rs  logger.rs  moves.rs  obs.rs  rbc_xf.rs  stats.rs
static/: style.css
