[package]
name = "rbc"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "*"
minreq = { version = "1.4.1-alpha.0", features = ["https"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
env_logger = { version = "*", default-features = false, features = ["termcolor", "atty", "humantime"] }
ctrlc = "*"
fen = "*"
rusqlite = { version = "*", features = ["bundled"] }
zstd = "*"
miniz_oxide = "*"
rayon = "*"
rand = "*"
pbr = "*"

# TODO: remove when
# https://github.com/neonmoe/minreq/commit/4f7f017246070bbfca237a247eff0936e53c0d96
# is released
[patch.crates-io]
minreq = { git = "https://github.com/neonmoe/minreq.git" }
