[package]
name = "rbc"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "*"
minreq = { version = "1.4.1-alpha.0", features = ["https"], optional = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
env_logger = { version = "*", default-features = false, features = ["termcolor", "atty", "humantime"] }
ctrlc = "*"
fen = "*"
rusqlite = { version = "*", features = ["bundled"], optional = true }
zstd = { version = "*", default-features = false, optional = true }
rayon = { version = "*", optional = true }
rand = "*"
pbr = { version = "*", optional = true }
chrono = "*"
backtrace = "*"
bitflags = "*"
fnv = "*"
lazy_static = "*"

# TODO: remove when
# https://github.com/neonmoe/minreq/commit/4f7f017246070bbfca237a247eff0936e53c0d96
# is released
[patch.crates-io]
minreq = { git = "https://github.com/neonmoe/minreq.git" }

[features]
heavy = ["rayon", "minreq", "pbr", "zstd", "rusqlite"]

[[bin]]
name = "download_games"
path = "src/bin/download_games.rs"
required-features = ["heavy"]

[[bin]]
name = "historian"
path = "src/bin/historian.rs"
required-features = ["heavy"]

[[bin]]
name = "replayer"
path = "src/bin/replayer.rs"
required-features = ["heavy"]

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["heavy"]
